product_list.html: handler added for no results; check_product_description method added to ShopParser; fixes to urls;

--- a/app/product/templates/product/product_search.html
+++ b/app/product/templates/product/product_search.html
@@ -5,7 +5,7 @@ Product Search
 {% endblock %}
 
 {% block content %}
-<form action="/product-search" method="POST">
+<form action="" method="POST">
     {% csrf_token %}
     <div class="form-control {% if form.search_phrase.errors %}errors{% endif %}">
         {{ form.search_phrase }}
