--- a/app/product/templates/product/product_list.html
+++ b/app/product/templates/product/product_list.html
@@ -7,10 +7,13 @@ Product List
 
 {% block content %}
 <div>
+
+    {% if products %}
+
     <ul>
         {% for product in products %}
         <li>
-            <a href="{% if product.shop.shop_name != 'superpharm' %}{{ product.shop.shop_url }}{% endif %}{{ product.url }}">
+            <a href="{% if product.shop.shop_name != 'superpharm' %}{{ product.shop.shop_url }}{% endif %}{{ product.url }}" target="_blank">
                 <h3>{{ product.name }} - {{ product.shop.shop_name}}: {{ product.price.price }}</h3>
                 <p>{{ product.description }}, {{ product.size }}</p>
                 <div class="prod-img">
@@ -20,6 +23,12 @@ Product List
         </li>
         {% endfor %}
     </ul>
+
+    {% else %}
+
+    <p>Sorry, no products found:(</p>
+
+    {% endif %}
 
 </div>
 {% endblock %}
